# mhorloge

./: .gitignore  Cargo.toml  README.md  generate-phrases.sh  generate.sh  tokenize.sh
docs/: beggin-grid.html  beggin.html  feeling-good-grid.html  feeling-good.html  grid.html  shining-light.html  time-phrases-1.html  time-phrases-15.html  time-phrases-5.html  time-phrases.html
docs/data/: feeling-good-sync-lyrics.json  shining-light-lyrics.txt  shining-light-sync-lyrics.json
examples/: beggin-grid.json  beggin-lyrics.txt  beggin-phrases.json  beggin-sync-lyrics.json  feeling-good-grid.json  feeling-good-lyrics.txt  feeling-good-phrases.json  feeling-good-sync-lyrics.json  feeling-good.html  time-phrases-grid.json  time-phrases.json
src/: build_grid.rs  clusterize.rs  compile_lyrics_css.rs  compile_lyrics_page.rs  generate_phrases.rs  main.rs  tokenize.rs  utils.rs
src/build_grid/: compile_html.rs  template.html
src/clusterize/: cluster.rs  cluster_graph.rs  constraints.rs  position.rs  rotated_cluster.rs  token_in_cluster.rs
src/commands/: generate_phrases.rs  mod.rs  tokenize.rs
src/compile_lyrics_page/: extract_segments.rs  keyframes.rs  template.html  wood-copywrite.txt
src/generate_phrases/: english.rs  french.rs  german.rs  language.rs  portuguese.rs  time.rs
src/languages/: en.rs  english.rs  fr.rs  french.rs  mod.rs  portuguese.rs  pt_br.rs
src/models/: aspect_ratio.rs  grid.rs  grid_bag.rs  io.rs  language.rs  letter.rs  merge_dag.rs  mod.rs  phrase.rs  phrase_book.rs  text.rs  texts.rs  (+9 more)
web/: sync-lyrics.css  sync-lyrics.html  sync-lyrics.js
(+7 files in other folders)
