[package]
name = "mhorloge"
version = "0.1.0"
authors = ["Guilherme <sitegui@sitegui.com.br>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
csv = "1.1.5"
env_logger = "0.8.2"
itertools = "0.10.0"
log = "0.4.13"
ordered-float = "2.0.1"
petgraph = "0.5.1"
rand = { version = "0.8.2", features = ["small_rng"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_json = "1.0.61"
structopt = "0.3.21"

[profile.release]
debug = true
opt-level = 2